--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-2085246d-aff5-4310-a0b8-93780358cdae;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=msdocs-core-sql-xyu-server.postgres.database.azure.com;Database=msdocs-core-sql-xyu-database;Port=5432;Ssl Mode=Require;User Id=mxiqwssyaa;Password=637RR4Y087G66LV2$;"
   }
 }
